k8/deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gfsa-fe
  namespace: qa
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gfsa-fe
  template:
    metadata:
      labels:
        app: gfsa-fe
    spec:
      containers:
      - name: gfsa-fe
        image: gcr.io/$PROJECT_ID/gfsa-fe:$SHORT_SHA
        ports:
        - containerPort: 3000
