k8/service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: gfsa-fe
  namespace: dev
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: gfsa-fe
  type: ClusterIP
