k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-app
  namespace: main
spec:
  type: LoadBalancer
  selector:
    app: nextjs-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
