k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextjs-app
  namespace: uat
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "my-static-ip"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ""
    http:
        paths:
          - path: /uat
            pathType: ImplementationSpecific
            backend:
              service:
                name: nextjs-app
                port:
                  number: 3000
